--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="teal">#4C73E8</color>
+    <color name="green">#1DB954</color>
+    <color name="lessBlack" >#00000000</color>
 </resources>
