--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,27 +12,25 @@
         android:layout_height="56dp"
         android:background="@color/green"
         android:layout_alignParentTop="true"
-        app:menu="@menu/tool_menu"
-        />
-
+        app:menu="@menu/tool_menu" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
-        android:layout_marginBottom="-59dp">
+        android:layout_marginBottom="56dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:src="@drawable/user"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -44,10 +41,30 @@
                 android:textStyle="bold"
                 android:padding="3dp"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginRight="5dp" />
 
-                />
+            <!-- RecyclerView for Weather Widget -->
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/weather_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="201dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/tweet"
+                android:layout_width="match_parent"
+                android:layout_height="93dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/news"
+                android:layout_width="match_parent"
+                android:layout_height="95dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp" />
 
         </LinearLayout>
     </ScrollView>
@@ -59,8 +76,6 @@
         android:background="@color/green"
         app:menu="@menu/bottom_menu"
         app:itemIconTint="@color/white"
-        app:itemIconSize="30dp"/>
-
-
+        app:itemIconSize="30dp" />
 
 </RelativeLayout>
