--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -1,15 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/weather_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/cloud" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
+        <ImageView
+            android:id="@+id/weather_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/cloud"
+            app:tint="@color/green" />
+<!--        <ImageView-->
+<!--            android:id="@+id/icon_location"-->
+<!--            android:layout_width="24dp"-->
+<!--            android:layout_height="24dp"-->
+<!--            android:src="@drawable/map" />-->
+
+        <TextView
+            android:id="@+id/weather_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Raleigh, NC"
+            android:textSize="16sp"
+            android:layout_marginStart="8dp"
+            android:layout_alignParentRight="true"
+            android:gravity="center_vertical"
+            />
+
+
+    </RelativeLayout>
 
 
     <!-- Temperature -->
@@ -122,24 +147,5 @@
     </LinearLayout>
 
     <!-- Location -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
 
-        <ImageView
-            android:id="@+id/icon_location"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/map" />
-
-        <TextView
-            android:id="@+id/weather_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Location: Raleigh, NC"
-            android:textSize="14sp"
-            android:layout_marginStart="8dp" />
-    </LinearLayout>
 </LinearLayout>
