--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="teal">#4C73E8</color>
     <color name="green">#1DB954</color>
     <color name="lessBlack" >#00000000</color>
+    <color name="blk_bg" >#151313</color>
 </resources>
