--- a/app/src/main/res/layout/activity_gemini.xml
+++ b/app/src/main/res/layout/activity_gemini.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/first_card">
 
                 <TextView
+                    android:id="@+id/disease_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Analyzed Disease: Early Blight"
