--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="teal">#4C73E8</color>
+    <color name="purple">#EF04EB</color>
     <color name="green">#1DB954</color>
+    <color name="sunny">#A89807</color>
+    <color name="grey">#989898</color>
+    <color name="red">#EF0A0A</color>
     <color name="lessBlack" >#00000000</color>
     <color name="blk_bg" >#151313</color>
 </resources>
