--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -1,151 +1,142 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:layout_width="325dp"
+    android:layout_height="177dp"
+    android:layout_margin="16dp"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical">
-        <ImageView
-            android:id="@+id/weather_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/cloud"
-            app:tint="@color/green" />
-<!--        <ImageView-->
-<!--            android:id="@+id/icon_location"-->
-<!--            android:layout_width="24dp"-->
-<!--            android:layout_height="24dp"-->
-<!--            android:src="@drawable/map" />-->
+        android:background="@drawable/weathercover">
 
-        <TextView
-            android:id="@+id/weather_location"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Raleigh, NC"
-            android:textSize="16sp"
-            android:layout_marginStart="8dp"
-            android:layout_alignParentRight="true"
             android:gravity="center_vertical"
-            />
+            android:orientation="horizontal"
+            android:padding="16dp">
 
+            <!-- Temperature and Weather Info -->
+            <!-- Added margin on the right -->
+
+            <ImageView
+                android:id="@+id/weather_poster"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="8dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/sun" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="180dp">
+
+                <TextView
+                    android:id="@+id/temp_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="18°C"
+                    android:textColor="@color/red"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/description_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Cloudy"
+                    android:textColor="@color/red"
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/linearLayout"
+            android:orientation="horizontal"
+            android:padding="16dp">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Humidity"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/humidity_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:text="Good"
+                    android:background="@color/green"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginStart="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rain"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textAlignment="center"/>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/rain_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:text="Good"
+                    android:background="@color/green"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginStart="5dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Moisture"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/moisture_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="44dp"
+                    android:text="Good"
+                    android:background="@color/green"
+                    android:textSize="12sp" />
+            </LinearLayout>
+        </LinearLayout>
 
     </RelativeLayout>
-
-
-    <!-- Temperature -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-        <ImageView
-            android:id="@+id/icon_temperature"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/baseline_device_thermostat_24" />
-
-        <TextView
-            android:id="@+id/weather_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Temperature: 25°C"
-            android:textSize="16sp"
-            android:layout_marginStart="8dp" />
-    </LinearLayout>
-
-    <!-- Humidity -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/icon_humidity"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/humidity" />
-
-        <TextView
-            android:id="@+id/weather_humidity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Humidity: 60%"
-            android:textSize="14sp"
-            android:layout_marginStart="8dp" />
-    </LinearLayout>
-
-    <!-- Rain -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/icon_rain"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/rain" />
-
-        <TextView
-            android:id="@+id/weather_rain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rain: 15mm"
-            android:textSize="14sp"
-            android:layout_marginStart="8dp" />
-    </LinearLayout>
-
-    <!-- Wind Speed -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/icon_wind_speed"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/wind" />
-
-        <TextView
-            android:id="@+id/weather_wind_speed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wind Speed: 10 km/h"
-            android:textSize="14sp"
-            android:layout_marginStart="8dp" />
-    </LinearLayout>
-
-    <!-- UV Index -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/icon_uv_index"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/uv_index" />
-
-        <TextView
-            android:id="@+id/weather_uv_index"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="UV Index: 0"
-            android:textSize="14sp"
-            android:layout_marginStart="8dp" />
-    </LinearLayout>
-
-    <!-- Location -->
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
