--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="teal">#4C73E8</color>
     <color name="green">#1DB954</color>
+    <color name="sunny">#A89807</color>
+    <color name="grey">#989898</color>
+    <color name="red">#F44336</color>
     <color name="lessBlack" >#00000000</color>
     <color name="blk_bg" >#151313</color>
 </resources>
