--- a/app/src/main/res/layout/activity_registerpage.xml
+++ b/app/src/main/res/layout/activity_registerpage.xml
@@ -22,12 +22,11 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="37dp"
             android:layout_marginEnd="9dp"
-            android:text="Go Back"
+            android:text="Already a member? Sign In"
             android:textSize="20sp"
             android:theme="@style/Theme.AppCompat.Light"
             app:backgroundTint="@android:color/holo_green_dark"
-            app:icon="@drawable/baseline_arrow_back_24"
-            app:iconSize="30dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
