--- a/app/src/main/res/layout/field_prompt_layout.xml
+++ b/app/src/main/res/layout/field_prompt_layout.xml
@@ -1,13 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        
+        <EditText
+            android:id="@+id/location_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:hint="Address"
+            android:textColor="#020202"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/field_weather_TV"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:padding="3dp"
+            android:hint="Weather info"
+            android:textColor="#020202"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/field_soil_TV"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:padding="3dp"
+            android:hint="Soil info"
+            android:textColor="#020202"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/field_des_ET"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:gravity="center"
+            android:hint="Write a small description."
+            android:textColor="#020202" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/dialog_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/green"
+            android:text="Add"
+            android:textColor="#020202" />
+
 
     </LinearLayout>
 
